bastion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goose-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ingress-nginx.thinkeod.com
    secretName: goose-tls
  rules:
  - host: ingress-nginx.thinkeod.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: goosvc-service   ######
            port:
              number: 80  ####
